--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -186,7 +186,6 @@
 /*======================TOP SIDEBAR==================*/
 aside {
     height: 100vh;
-    margin-top: var(--header-height);
 }
 
 aside .top {
@@ -705,6 +704,37 @@ input:checked+label {
     border-width: 1px;
     border-style: solid;
     border-color: #eee;
+}
+
+/* ======================== RECIEVER MESSAGE ================ */
+.layui-tab-item {
+    margin-top: 20px;
+    background-color: #f5f5f5;
+}
+
+.layui-textarea {
+    display: block;
+    width: 100%;
+    padding-left: 10px;
+    height: 38px;
+    line-height: 1.3;
+    line-height: 38px\9;
+    border-width: 1px;
+    border-style: solid;
+    background-color: #fff;
+    color: rgba(0, 0, 0, .85);
+    border-radius: 2px;
+    border-color: #eee;
+    position: relative;
+    min-height: 100px;
+    height: auto;
+    line-height: 20px;
+    padding: 6px 10px;
+    resize: vertical;
+}
+
+.layui-textarea:hover {
+    border-color: #eee !important;
 }
 
 /* =========================== RIGHT ========================*/
